--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"url": "sindresorhus.com"
 	},
 	"engines": {
-		"node": ">=8"
+		"node": ">=12"
 	},
 	"scripts": {
 		"test": "xo && ava && tsd"
@@ -40,11 +40,10 @@
 	],
 	"dependencies": {
 		"ajv": "^6.10.2",
-		"debounce-fn": "^3.0.1",
 		"dot-prop": "^5.0.0",
 		"env-paths": "^2.2.0",
 		"json-schema-typed": "^7.0.1",
-		"make-dir": "^3.0.0",
+		"nsfw": "^1.2.7",
 		"onetime": "^5.1.0",
 		"pkg-up": "^3.0.1",
 		"semver": "^6.2.0",
