--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	"dependencies": {
 		"ajv": "^6.10.2",
 		"chokidar": "^3.3.1",
+		"debounce-fn": "^3.0.1",
 		"dot-prop": "^5.0.0",
 		"env-paths": "^2.2.0",
 		"json-schema-typed": "^7.0.1",
